paperless/CiliumNetworkPolicy-valkey.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: valkey
  namespace: paperless
spec:
  egress:
    - {}
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
